# item-identification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
notebook/: 2.scanned-barcodes.json  2025-04-29-lsb-new-api.ipynb  2025-05-17-data-augment-class.ipynb  2025-05-17-finetune-yolov8.ipynb  2025-05-18-segment-object-merge-down.ipynb  2025-05-20-quick-object-count.ipynb  2025-06-01-import-data.ipynb  2025-06-02-export-cls-dataset.ipynb  2025-06-06-conv-mixer.ipynb  2025-06-07-backbone-as-features.ipynb  2025-06-07-check-test-dataset.ipynb  2025-06-09-export-datasets.ipynb  2025-06-09-finetune-models.ipynb  2025-06-09-finetune-yolov8.ipynb  2025-06-09-merge-datasets.ipynb  2025-06-09-merge-label.ipynb  2025-06-09-validate-dataset.ipynb  2025-06-10-finetune-yolov8.ipynb  2025-06-10-zoom-in-sku110k.ipynb  2025-06-11-0-export-datasets-object-only.ipynb  2025-06-11-1-merge-datasets.ipynb  2025-06-11-8-train-arcface.ipynb  2025-06-11-8-train-classifier-densenet.ipynb  2025-06-11-9-finetune-yolov11.ipynb  2025-06-11-export-as-object-only.ipynb  2025-06-11-export-datasets-object-only.ipynb  2025-06-11-finetune-yolo8-to-yolo11.ipynb  2025-06-11-finetune-yolov11.ipynb  2025-06-11-merge-datasets-for-yolo.ipynb  2025-06-11-merge-datasets.ipynb  2025-06-12-clip-arcface.ipynb  2025-06-12-combine-models.ipynb  2025-06-12-densenet-arcface.ipynb  2025-06-12-train-arcface.ipynb  2025-06-12-train-classifier-cutmix.ipynb  2025-06-14-experiment-clip.ipynb  2025-06-14-experiment-llava.ipynb  2025-06-14-fewshot-learning.ipynb  2025-06-14-vlm-exp.ipynb  2025-06-15-openai-clip.ipynb  (+39 more)
notebooks/: 0.import-data.ipynb  2.scan-barcode.ipynb  2.scanned-barcodes.csv  3.convert-ls-xml.ipynb  7.rpn-detr.ipynb  8-knn-model.ipynb  9-lsb-new-api.ipynb
res/: config.json  metadata.json
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
(+69 files in other folders)
