[tool.poetry]
name = "item-identification"
version = "0.1.0"
description = ""
authors = ["Cuong Thai <cuongthai@mylong.io>"]
readme = "README.md"
packages = [{include = "hcmus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
pydantic = "^2.10.6"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
