[project]
name = "item-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.10.0",
    "loguru>=0.7.3",
    "numpy>=2.0.2",
    "pandas==2.2.2",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "ultralytics>=8.3.111",
]
